cad-768 fixed hearing notifications for civil